[package]
name = "solana-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.18.11"
borsh = "0.9.1"
borsh-derive = "0.9.1"
thiserror = "1.0.24"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_template"